[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MKisil <mihajlokisil20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
